# sqlalchemy-repl

./: README.md  pyproject.toml
sqlrepl/: __init__.py  cmd.py  repl.py  settings.py
tests/: run.py
